# CustomStylePlugin

src/: CMakeLists.txt  CustomStylePlugin.qrc  customstyle.cpp  customstyle.h  customstyle.json  customstyleplugin.cpp  customstyleplugin.h  project_pch.h
